--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,6 @@
 name: Build and Deploy
 
-on:
-  workflow_dispatch: {}
-
+on: push
 env:
   applicationfolder: spring-boot-hello-world-example
   AWS_REGION: ap-south-1
