--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,6 +19,6 @@ jobs:
           aws-region: ap-south-1
 
       - name: Sync GitHub Repository to AWS CodeCommit
-        uses: topotal/aws-codecommit-sync-action@v1
+        uses: inception-health/sync-up-to-codecommit-action@main
         with:
           codecommit_url: https://git-codecommit.ap-south-1.amazonaws.com/v1/repos/TEST_DEV
