--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,4 +28,7 @@ jobs:
           aws_region: ap-south-1
           branch: main
           run: |
-               ls
+              git config --global user.email ${{secrets.GIT_EMAIL_DEPLOY}}
+              git config --global user.name ${{secrets.GIT_USER_DEPLOY}}
+              git config --global credential.helper cache
+              ls
