--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,22 +13,20 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ap-south-1
-
-      - name: Sync up to CodeCommit
-        uses: afinkorea/sync-up-to-codecommit-action@v1
-        with:
-          repository_name: TEST_DEV
-          aws_region: ap-south-1
-          branch: main
           run: |
-              git config --global user.email ${{secrets.GIT_EMAIL_DEPLOY}}
-              git config --global user.name ${{secrets.GIT_USER_DEPLOY}}
-              git config --global credential.helper cache
-              ls
+               git config --global user.email ${{secrets.GIT_EMAIL_DEPLOY}}
+               git config --global user.name ${{secrets.GIT_USER_DEPLOY}}
+               git config --global credential.helper cache
+               mkdir checkout              
+               git remote remove origin
+               git remote add origin https://git-codecommit.ap-south-1.amazonaws.com/v1/repos/TEST_DEV
+               cd checkout
+               git clone https://git-codecommit.ap-south-1.amazonaws.com/v1/repos/TEST_DEV
+               ls
+         
