--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,8 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ap-south-1
-          run: |
+      - name: deploy
+        run: |
                git config --global user.email ${{secrets.GIT_EMAIL_DEPLOY}}
                git config --global user.name ${{secrets.GIT_USER_DEPLOY}}
                git config --global credential.helper cache
