--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,8 +2,10 @@ name: sync up to codecommit
 
 on:
   push:
+    tags-ignore:
+      - '*'
     branches:
-      - 'main'
+      - '*'
 
 jobs:
   sync:
@@ -14,18 +16,16 @@ jobs:
         with:
           fetch-depth: 0
       - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v1
+        uses: aws-actions/configure-aws-credentials@v1.0.3
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ap-south-1
-      - name: deploy
-        run: |
-               git config --global credential.helper '!aws codecommit credential-helper $@'
-               git config --global credential.UseHttpPath true
-               git config --global credential.helper cache
-               git remote remove origin
-               git remote add codecommit origin https://git-codecommit.ap-south-1.amazonaws.com/v1/repos/TEST_DEV
-               git clone codecommit https://git-codecommit.ap-south-1.amazonaws.com/v1/repos/TEST_DEV
-               ls
-         
+          aws-region: us-east-1
+
+      - name: Sync up to CodeCommit
+        uses: tsgit18/sync-up-to-codecommit-action@v1
+        with:
+          repository_name: test_repo
+          aws_region: us-east-1
+          run: |
+              ls
