--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,12 +1,10 @@
 name: sync up to codecommit
-
 on:
   push:
     tags-ignore:
       - '*'
     branches:
-      - '*'
-
+      - 'main'
 jobs:
   sync:
     runs-on: ubuntu-latest
@@ -15,13 +13,15 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
+      - name: deploy
+        run: |
+              git config --global safe.directory '*'
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ap-south-1
-
       - name: Sync up to CodeCommit
         uses: tsgit18/sync-up-to-codecommit-action@v1
         with:
@@ -29,3 +29,4 @@ jobs:
           aws_region: ap-south-1
       - name: deploy
         run: |
+             ls
